Last likely chance of overflow visual bugs

--- a/assets/index.css
+++ b/assets/index.css
@@ -40,6 +40,7 @@ body {
     display: flex;
     justify-content: flex-start;
     flex-flow: row wrap;
+    overflow: scroll;
 }
 
 .grid-item {
